# fastertransformer_backend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.env
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  deploy.yml  docker.yml
all_models/bert/fastertransformer/: config.pbtxt
all_models/bert/fastertransformer/1/1-gpu/: config.ini
all_models/bert/fastertransformer/1/2-gpu/: config.ini
all_models/bloom/ensemble/: config.pbtxt
all_models/bloom/fastertransformer/: config.pbtxt
all_models/bloom/fastertransformer/1/: config.ini
all_models/bloom/postprocessing/: config.pbtxt
all_models/bloom/postprocessing/1/: model.py
all_models/bloom/preprocessing/1/: model.py
all_models/ensemble/: config.pbtxt
all_models/fastertransformer/: config.pbtxt
all_models/gpt-interactive-text-generation/ensemble/: config.pbtxt
all_models/gpt-interactive-text-generation/fastertransformer/: config.pbtxt
all_models/gpt-interactive-text-generation/fastertransformer/1/: config.ini
all_models/gpt-interactive-text-generation/postprocessing/: config.pbtxt
all_models/gpt-interactive-text-generation/postprocessing/1/: model.py
all_models/gpt-interactive-text-generation/preprocessing/: config.pbtxt
all_models/gpt-interactive-text-generation/preprocessing/1/: model.py
all_models/gpt/ensemble/: config.pbtxt
all_models/gpt/fastertransformer/: config.pbtxt
all_models/gpt/fastertransformer/1/: config.ini
all_models/gpt/postprocessing/1/: model.py
all_models/gpt/postprocessing/1/utils/: gpt_token_encoder.py
all_models/gpt/preprocessing/: config.pbtxt
all_models/gpt/preprocessing/1/: model.py  word_list.py
all_models/gpt/preprocessing/1/utils/: gpt_token_encoder.py
all_models/gptj/ensemble/: config.pbtxt
all_models/gptj/fastertransformer/: config.pbtxt
all_models/gptj/fastertransformer/1/: config.ini
all_models/gptj/postprocessing/: config.pbtxt
all_models/gptj/postprocessing/1/: model.py
all_models/gptj/preprocessing/: config.pbtxt
all_models/gptj/preprocessing/1/: model.py  word_list.py
all_models/gptneox/ensemble/: config.pbtxt
all_models/gptneox/fastertransformer/: config.pbtxt
all_models/gptneox/fastertransformer/1/: config.ini
all_models/gptneox/postprocessing/: config.pbtxt
all_models/gptneox/postprocessing/1/: model.py
all_models/gptneox/preprocessing/: config.pbtxt
all_models/gptneox/preprocessing/1/: model.py  word_list.py
all_models/llama/ensemble/: config.pbtxt
all_models/llama/fastertransformer/: config.pbtxt
all_models/llama/fastertransformer/1/: config.ini
all_models/llama/postprocessing/: config.pbtxt
all_models/llama/postprocessing/1/: model.py
all_models/llama/preprocessing/: config.pbtxt
all_models/llama/preprocessing/1/: model.py
all_models/t5-encoder/fastertransformer/: config.pbtxt
all_models/t5-encoder/tokenizer/: config.pbtxt
all_models/t5-encoder/tokenizer/1/: model.py
all_models/t5/fastertransformer/: config.pbtxt
all_models/t5/fastertransformer/1/: config.ini
all_models/t5/fastertransformer/1/1-gpu/: config.ini
all_models/transformer/: config.pbtxt
cmake/: TritonFasterTransformerBackendConfig.cmake.in
docker/: Dockerfile  create_dockerfile_and_build.py
docs/: bert_guide.md  gpt_guide.md  gptj_guide.md  gptneox_guide.md  llama_guide.md  t5_guide.md
isolated-batcher/: .gitignore  CMakeLists.txt
isolated-batcher/cmake/: triton-isolated-batcher.cmake.in
isolated-batcher/src/: isolated_batcher.cc  libtriton_isolated_batcher.ldscript
notebooks/: GPT-J_and_T5_inference.ipynb
src/: libfastertransformer.cc  libtransformer.cc
tools/: benchmark.py  benchmark_single_node.sh  create_gpt_config.sh  create_gptj_config.sh  end_to_end_test.py  end_to_end_test_llama.py  evaluate_lambada.py  gpt_prompt_learning_squad_task_eval.py  gpt_prompt_learning_squad_task_identity_test.py  identity_test.py  issue_request.py  kill_server.sh  run_client.sh  run_server.sh  utils.sh
tools/bert/: create_bert_config.sh  identity_test.py
tools/gpt/: create_gpt_config.sh  end_to_end_test.py  evaluate_lambada.py  gpt_prompt_learning_squad_task_eval.py  gptneox_jp_test.py  identity_test.py  xglm_test.py
tools/interactive_text_generation/: create_interactive_gpt_config.sh  end_to_end_test.py  identity_test.py  triton_out_baseline
tools/requests/: sample_request.json  sample_request_ensemble.json  sample_request_runtime_top_k.json  sample_request_single.json  sample_request_single_t5.json  sample_request_single_t5_encoder.json  sample_request_single_t5_ia3.json  sample_request_stream.json  sample_request_stream_t5.json  sample_request_tokenizer.json
tools/t5_utils/: boolq_test.jsonl  boolq_test.py  boolq_test_hf.py  create_t5_config.sh  create_t5_encoder_config.sh  summarization.py  t5_end_to_end_test.py  t5_mnli_task.py  t5_requirement.txt  t5_xnli_task.py
tools/utils/: gpt_prompt_learning.py  gpt_token_encoder.py  recover_bpe.py
